plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// 루트 프로젝트 의존성(의존성 추가는 여기다 해주세요)
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // jwt
    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

    // notifications
    implementation 'org.springframework.boot:spring-boot-starter-web-services'

    // WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // querydsl 추가
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = 'com.example'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    tasks.named('test') {
        useJUnitPlatform()
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        compileOnly 'org.projectlombok:lombok'
        runtimeOnly 'com.h2database:h2'
        runtimeOnly 'com.mysql:mysql-connector-j'
        annotationProcessor 'org.projectlombok:lombok'

        // test
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'io.projectreactor:reactor-test'
        testImplementation 'org.springframework.security:spring-security-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation 'com.squareup.okhttp3:mockwebserver'

        // Mockito
        testImplementation 'org.mockito:mockito-core:5.14.2'

        // JUnit 5 (Jupiter)
        testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'

        // H2 Database (테스트용)
        testImplementation 'com.h2database:h2'

        // WebClient
        implementation 'org.springframework.boot:spring-boot-starter-webflux'
        // Jackson
        compileOnly 'com.googlecode.json-simple:json-simple:1.1.1'

        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta'

        implementation 'org.springframework.boot:spring-boot-starter-batch'
        testImplementation 'org.springframework.boot:spring-boot-starter-batch'

    }
}
